# simbio

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  conftest.py  pyproject.toml  try-rebop.ipynb
.github/workflows/: ci.yml
docs/: _config.yml  index.md
docs/compilers/: index.md
docs/design/: references.md
docs/examples/: basic.md  chained-reactions.md  compartments.md  enzymatic.md
docs/model/: dynamic.md  reactions.md  static.md
docs/notebooks/: Getting_started_with_simbio.ipynb  Stochastic.ipynb  example_local_smbl.xml  import_sbml.ipynb  repressilator.ipynb
src/simbio/: __init__.py  core.py  test_core.py
src/simbio/io/graph/: networkx.py
src/simbio/io/mathML/: exporter.py  importer.py  symbol.py  test_mathML.py  to_symbolite.py
src/simbio/io/sbml/: importer.py  test_importer.py
src/simbio/reactions/: __init__.py  compound.py  enzymatic.py  single.py  test_reactions.py
src/simbio/rebop/: __init__.py
src/simbio/simulators/: rebop-expr.py  rebop.py
