[project]
name = "simbio"
description = "A Python-based package for simulation of Chemical Reaction Networks (CRNs)."
version = "1.0.0"
authors = [
  { name = "Hernán E. Grecco", email = "hernan.grecco@gmail.com" },
  { name = "Mauro Silberberg", email = "maurosilber@gmail.com" },
]
readme = { file = "README.md", content-type = "text/markdown" }
license = "MIT"
classifiers = [
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Libraries",
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
keywords = [
  "mass action",
  "michaelis menten",
  "ode",
  "compartment",
  "reaction",
  "SBML",
  "poincare",
]
requires-python = ">=3.12"
dependencies = ["poincare >= 1.0.0"]

[project.urls]
homepage = "https://github.com/dyscolab/simbio"
issues = "https://github.com/dyscolab/simbio/issues"
changelog = "https://github.com/dyscolab/simbio/blob/main/CHANGELOG.md"
documentation = "https://dyscolab.github.io/simbio"

[project.optional-dependencies]
io = ["biomodels", "python-libsbml"]

[build-system]
requires = ["uv_build>=0.9,<0.10"]
build-backend = "uv_build"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
extend-select = ["I"]

[tool.pyright]
typeCheckingMode = "standard"
venv = "test"
venvPath = ".pixi/envs/"

[tool.pyrefly]
python-interpreter-path = ".pixi/envs/default/bin/python"
project-excludes = [".pixi", "**/__pycache__"]

[tool.ty.environment]
python = ".pixi/envs/default"

[tool.pixi.workspace]
channels = ["https://prefix.dev/conda-forge"]
platforms = ["linux-64", "osx-arm64", "win-64"]
preview = ["pixi-build"]

[tool.pixi.package.build]
backend = { name = "pixi-build-python", version = "0.4.*" }

[tool.pixi.package.host-dependencies]
uv-build = "*"

[tool.pixi.package.run-dependencies]
# poincare = ">=1.0.0"

[tool.pixi.environments]
default = ["test", "py312"]
lint = { features = ["lint"], no-default-feature = true }
build = { features = ["build"], no-default-feature = true }
test-py312 = ["test", "io", "py312"]
test-py313 = ["test", "io", "py313"]
test-py314 = ["test", "io", "py314"]

[tool.pixi.dependencies]
simbio = { path = "." }

[tool.pixi.pypi-dependencies]
biomodels = "*"
python-libsbml = "*"

[tool.pixi.feature.lint.dependencies]
pre-commit = "*"
pre-commit-hooks = "*"
taplo = "*"
ruff = "*"
mdformat = "*"
mdformat-ruff = "*"
pyright = "*"

[tool.pixi.feature.lint.tasks]
pre-commit-install = "pre-commit install"
lint = "pre-commit run"

[tool.pixi.feature.build.dependencies]
uv = "*"
python = "*"

[tool.pixi.feature.build.pypi-dependencies]
mdremotifier = "*"

[tool.pixi.feature.build.tasks]
build = { cmd = "uv build", depends-on = ["remotify"] }
publish = "uv publish"
remotify = { cmd = [
  "mdremotifier",
  "-i",
  "README.md",
  "-o",
  "README.md",
  "--url-prefix",
  "https://github.com/dyscolab/simbio/blob/main",
  "--img-url-prefix",
  "https://raw.githubusercontent.com/dyscolab/simbio/refs/heads/main/",
] }

[tool.pixi.feature.test.dependencies]
pytest = "*"
pooch = "*"

[tool.pixi.feature.test.tasks]
test = "pytest src/simbio/test_core.py src/simbio/reactions/test_reactions.py --doctest-modules"

[tool.pixi.feature]
py312.dependencies = { python = "3.12.*" }
py313.dependencies = { python = "3.13.*" }
py314.dependencies = { python = "3.14.*" }
